=============
Release 0.9.5
=============

* speeding up the optimization of the amplitudes with MPI
* speeding up the processing of numpy datafiles (SpikeInterface)
* speeding up the smart search step (pre-generation of random numbers)
* speeding up the clustering step

=============
Release 0.9.2
=============

* speeding up the algorithm
* fixing a bug in the clustering while assigining labels
* better detection of noise snippets discarded during clustering
* cosmetic changes in the sanity plots (clusters)
* better handling of overlapping chunks while filtering, removing filtering artefacts
* templates are restricted within shanks
* optimization of the amplitudes once all templates have been found
* export of a purity value, for phy, to assess how good a cluster is (between 0 and 1)
* display the purity value in MATLAB
* fix a (silent) bug in the supports introduced in 0.9.0, preventing mixture removal
* nb_chances is automatically adapted during the fitting procedure
* drifts are now automatically handled by the meta merging procedure
* enhancement in the automatic merging of drifts

=============
Release 0.9.1
=============

* minor bug fixes in spyking-circus-launcher
* fix a bug in the amplitude display. Values were shuffled when several CPU were used
* add the option to ignore second component [clustering]->two_components

=============
Release 0.9.0
=============

* can now fit spikes below detection threshold (with ratio_thresh in [fitting], 0.9 as default)
* templates are now estimated without any spatial restrictions
* optimization of the smart search for small recording
* spline regularization was not stable for all probe geometry

=============
Release 0.8.9
=============

* fix a small bug in the smart search, introduced while refactoring in 0.8.7

=============
Release 0.8.8
=============

* fix a regression introduced in 0.8.7 for non contiguous probe indices

=============
Release 0.8.7
=============
