@@ -6,6 +6,7 @@ Release 0.9.5
 * speeding up the processing of numpy datafiles (SpikeInterface)
 * speeding up the smart search step (pre-generation of random numbers)
 * speeding up the clustering step
+* fix a bug while filtering in the preview mode introduced in 0.9.2
 
 =============
 Release 0.9.2
